2009-03-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler): Fix
	a memory leak in freeing the list of transients.
	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_fullscreen):
	Fix an identical list-related memory leak.

2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/comp-mgr/mb-wm-comp-mgr.c:
	  mb_wm_comp_mgr_unregister_client():
	    break the connection between the wm-client and cmgr-client
	    on both sides and don't leave dangling pointers around.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	  mb_wm_comp_mgr_clutter_fetch_texture():
	    added a missing mb_wm_util_trap_x_errors().
	  mb_wm_comp_mgr_clutter_client_destroy():
	    prepare for XDamageDestroy() erring out for whatever reason.
	    fixes an abnormal program termination when incoming event
	    notifications are unmapped.

2009-03-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties):
	Regression fix.  When the the window name property changed but we
	failed to get the new value the old MBWMClientWindow::name field
	left dangling.  Fixes a crash with modest's new account wizard,
	which tries to set the dialog's title when it is cancelled.

2009-03-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#103836 (or at least its test case).
	
	* matchbox/core/mb-wm-client-window.c: When we're told that
	a window's transiency has changed, update the information
	in the client window structure if the window is mapped.

2009-03-18  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-base.[ch] (base_foo): Removed, does
	not seem to be necessary hack anymore...
	* matchbox/core/mb-window-manager.c (mb_wm_set_cursor,
	mb_wm_init_cursors): Removed. Also remove call to base_foo.
	(mb_window_manager_init): Replace mb_wm_init_cursors call with
	XFixesHideCursor call.
